--- a/html/catSearch.html
+++ b/html/catSearch.html
@@ -8,8 +8,10 @@
 	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../css/catSearch.css">
+	<script src="../js/cat/advanceSearch_JQuery.js"></script>
+	<script src="../js/cat/arrowSwitch.js"></script>
+	<script src="../js/cat/like.js"></script>
 	<script src="../js/signIn.js"></script>
-
 	<title>尋喵</title>
 </head>
 
@@ -148,8 +150,8 @@
 			<form method="POST" action="#" class='selectForm'>
 				<div>
 					<div class="formInsert">
-						<input type="text" class="searchBar condition1" placeholder="你知道心儀喵喵的名字嗎？">
-						<button type="submit" class="searchBtn defaultBtn">
+						<input type="text" class="searchBar condition1" id="searchText" placeholder="你知道心儀喵喵的名字嗎？">
+						<button type="button" class="searchBtn defaultBtn" id="searchBtn">
 							<i class="fa fa-search " aria-hidden="true"></i>
 						</button>
 					</div>
@@ -159,7 +161,6 @@
 					<i class="fa fa-angle-down" id="arrowDown" aria-hidden="true"></i>
 				</label>
 				<input type="checkbox" id="advanced">
-				<script src="../js/cat/arrowSwitch.js"></script>
 				<div class="advanceSearchItem">
 					<div>
 						<label class="selectTitle">毛色：</label>
@@ -212,248 +213,72 @@
 							<button type="button" class="condition" data-name='gender' data-val='1'>女孩</button>
 						</div>
 					</div>
-
-					<div>
-						<label class="selectTitle">年齡：</label>
-						<div class="formInsert">
-							<button type="button" class="condition condition1" data-name='age' data-val='0'>四個月以下</button>
-							<button type="button" class="condition" data-name='age' data-val='1'>四個月到一歲</button>
-							<br class="forRWD">
-							<button type="button" class="condition" data-name='age' data-val='2'>一歲到三歲</button>
-							<button type="button" class="condition" data-name='age' data-val='3'>三歲以上</button>
-						</div>
-					</div>
-					<div>
-						<label class="selectTitle">疫苗：</label>
-						<div class="formInsert">
-							<button type="button" class="condition condition1" data-name='vaccine' data-val='0'>已施打</button>
-							<button type="button" class="condition" data-name='vaccine' data-val='1'>未施打</button>
-						</div>
-					</div>
-					<div>
-						<label class="selectTitle">結紮：</label>
-						<div class="formInsert">
-							<button type="button" class="condition condition1" data-name='ligation' data-val='0'>已結紮</button>
-							<button type="button" class="condition" data-name='ligation' data-val='1'>未結紮</button>
-						</div>
-					</div>
 				</div>
 				<div class='S_checkbox' style='display:none;'></div>
 			</form>
-			<script src="../js/cat/advanceSearch_JQuery.js"></script>
-			<div class="catPic">
-				<select name="sortCat" id="sortCat">
-					<option value="1">刊登日期從新到舊</option>
-					<option value="2">刊登日期從舊到新</option>
-				</select>
-				<picture class="catItem catItem_1">
-					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
-					<div class="catContent">
-						<a href="catContent.html" title="瀏覽喵航航">
-							<div class="img">
-								<img src="../images/catUpload/album_img_1_resized.jpg" alt="喵航航">
-							</div>
-						</a>
-						<button type="button" class="quickView">
-							Quick View
-						</button>
-					</div>
-					<figure>
-						<h3>喵航航</h3>
-						<br>新北市
-						<br>約2017/09月份出生
-						<br>男生
-						<i class="fa fa-mars" aria-hidden="true"></i>
-						<br>活潑親人
-					</figure>
-				</picture>
-				<picture class="catItem catItem_2">
-					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
-					<div class="catContent">
-						<a href="catContent.html" title="瀏覽喵航航">
-							<div class="img">
-								<img src="../images/catUpload/album_img_2_resized.jpg" alt="喵辛巴">
-							</div>
-						</a>
-						<button type="button" class="quickView">
-							Quick View
-						</button>
-					</div>
-					<figure>
-						<h3>喵辛巴</h3>
-						<br>新北市
-						<br>約2015年出生
-						<br>男生
-						<i class="fa fa-mars" aria-hidden="true"></i>
-						<br>巨大親人愛撒嬌
-					</figure>
-				</picture>
-				<picture class="catItem catItem_3">
-					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
-					<div class="catContent">
-						<a href="catContent.html" title="瀏覽喵航航">
-							<div class="img">
-								<img src="../images/catUpload/album_img_3_resized.jpg" alt="喵芽芽">
-							</div>
-						</a>
-						<button type="button" class="quickView">
-							Quick View
-						</button>
-					</div>
-					<figure>
-						<h3>喵芽芽</h3>
-						<br>臺北市
-						<br>約2017/09月份出生
-						<br>女生
-						<i class="fa fa-venus" aria-hidden="true"></i>
-						<br>活潑親人
-					</figure>
-				</picture>
-				<picture class="catItem catItem_4">
-					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
-					<div class="catContent">
-						<a href="catContent.html" title="瀏覽喵航航">
-							<div class="img">
-								<img src="../images/catUpload/album_img_4_resized.jpg" alt="喵蝦米">
-							</div>
-						</a>
-						<button type="button" class="quickView">
-							Quick View
-						</button>
-					</div>
-					<figure>
-						<h3>喵蝦米</h3>
-						<br>新竹市
-						<br>約2017/01月份出生
-						<br>男生
-						<i class="fa fa-mars" aria-hidden="true"></i>
-						<br>活潑親人
-					</figure>
-				</picture>
-				<picture class="catItem catItem_5">
-					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
-					<div class="catContent">
-						<a href="catContent.html" title="瀏覽喵航航">
-							<div class="img">
-								<img src="../images/catUpload/album_img_5_resized.jpg" alt="喵絨絨">
-							</div>
-						</a>
-						<button type="button" class="quickView">
-							Quick View
-						</button>
-					</div>
-					<figure>
-						<h3>喵絨絨</h3>
-						<br>桃園市
-						<br>約2017/02月份出生
-						<br>女生
-						<i class="fa fa-venus" aria-hidden="true"></i>
-						<br>塞奶的三花貓
-					</figure>
-				</picture>
-				<picture class="catItem catItem_6">
-					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
-					<div class="catContent">
-						<a href="catContent.html" title="瀏覽喵航航">
-							<div class="img">
-								<img src="../images/catUpload/album_img_6_resized.jpg" alt="喵咪醬">
-							</div>
-						</a>
-						<button type="button" class="quickView">
-							Quick View
-						</button>
-					</div>
-					<figure>
-						<h3>喵咪醬</h3>
-						<br>高雄市
-						<br>約2017/05月份出生
-						<br>男生
-						<i class="fa fa-mars" aria-hidden="true"></i>
-						<br>超級親人活潑外放
-					</figure>
-				</picture>
-				<picture class="catItem catItem_7">
-					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
-					<div class="catContent">
-						<a href="catContent.html" title="瀏覽喵航航">
-							<div class="img">
-								<img src="../images/catUpload/album_img_7_resized.jpg" alt="喵皮皮">
-							</div>
-						</a>
-						<button type="button" class="quickView">
-							Quick View
-						</button>
-					</div>
-					<figure>
-						<h3>喵皮皮</h3>
-						<br>台南市
-						<br>約2015年出生
-						<br>男生
-						<i class="fa fa-mars" aria-hidden="true"></i>
-						<br>超愛吃
-					</figure>
-				</picture>
-				<picture class="catItem catItem_8">
-					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
-					<div class="catContent">
-						<a href="catContent.html" title="瀏覽喵航航">
-							<div class="img">
-								<img src="../images/catUpload/album_img_8_resized.jpg" alt="喵默默">
-							</div>
-						</a>
-						<button type="button" class="quickView">
-							Quick View
-						</button>
-					</div>
-					<figure>
-						<h3>喵默默</h3>
-						<br>台東縣
-						<br>約2017/09月份出生
-						<br>女生
-						<i class="fa fa-venus" aria-hidden="true"></i>
-						<br>親人愛玩
-					</figure>
-				</picture>
-				<picture class="catItem catItem_9">
-					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
-					<div class="catContent">
-						<a href="catContent.html" title="瀏覽喵航航">
-							<div class="img">
-								<img src="../images/catUpload/album_img_9_resized.jpg" alt="喵追風">
-							</div>
-						</a>
-						<button type="button" class="quickView">
-							Quick View
-						</button>
-					</div>
-					<figure>
-						<h3>喵追風</h3>
-						<br>連江縣
-						<br>約2015/出生
-						<br>男生
-						<i class="fa fa-mars" aria-hidden="true"></i>
-						<br>長得像反派老大...
-					</figure>
-				</picture>
-				<script src="../js/cat/like.js"></script>
+			<select name="sortCat" id="sortCat">
+				<option value="1">刊登日期從新到舊</option>
+				<option value="2">刊登日期從舊到新</option>
+			</select>
+			<div class="catPic" id="content">
+				<!-- 使用ajax撈資料並放到這裡 -->
 			</div>
-			<div class="page">
-				<a href="#1" title="第一頁">
-					<li class="pageNo defaultBtn">1</li>
-				</a>
-				<a href="#2" title="第二頁">
-					<li class="pageNo defaultBtn">2</li>
-				</a>
-				<a href="#3" title="第三頁">
-					<li class="pageNo defaultBtn">3</li>
-				</a>
-				<a href="#4" title="第四頁">
-					<li class="pageNo defaultBtn">4</li>
-				</a>
-				<a href="#5" title="第五頁">
-					<li class="pageNo defaultBtn">5</li>
-				</a>
-			</div>
+			<script>
+				window.addEventListener('load',() => {
+					function getData(info) {
+						let xhr = new XMLHttpRequest()
+						xhr.onload = function () {
+							if (xhr.status == 200) {
+								let content = document.getElementById('content')
+								content.innerHTML = xhr.responseText
+								like()
+							} else {
+								alert(xhr.status)
+							}
+						}
+						let url = '../php/catSearch.php'
+						let dataInfo = info
+						xhr.open("post", url, true)
+						xhr.setRequestHeader("content-type", "application/x-www-form-urlencoded");
+						xhr.send(dataInfo)
+					}
+					function ajaxData(e){
+						let searchText = document.getElementById('searchText').value
+						let sort = document.getElementById('sortCat').value
+						if( searchText !== '' ){
+							// if( sort == 2 ){
+								// getData('sort=2&searchText=' + searchText)
+							// }else{
+								getData('searchText=' + searchText)
+						}else{
+							getData();
+						}
+						// }else if( searchText == '' ) {
+							// if ( sort == 2 ) {
+							// 	getData('sort=2')
+							// }
+					}
+					function like() {
+						let heart = document.getElementsByClassName('favorite');
+						for (let i = 0, len = heart.length; i < len; i++) {
+							heart[i].addEventListener('click', () => {
+								if (heart[i].className.match('fa-heart-o')) {
+									heart[i].className =
+										heart[i].className.replace
+											('fa-heart-o', 'fa-heart')
+								} else {
+									heart[i].className =
+										heart[i].className.replace
+											('fa-heart', 'fa-heart-o')
+								}
+							})
+						}
+					}
+					let searchBtn = document.getElementById('searchText')
+					searchBtn.addEventListener('input', ajaxData)
+					getData();
+				});
+			</script>
 		</div>
 	</div>
 	<footer>
