--- a/html/halfMem.html
+++ b/html/halfMem.html
@@ -77,7 +77,7 @@
                         <li onclick="getData('halfMemAdobtRecord.php');" class="li">
                             <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 查詢領養紀錄
                         </li>
-                        <li onclick="getData('halfMemAdopt.php');" class="li">
+                        <li onclick="getData('halfMemAdobt.php');" class="li">
                             <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 審核領養案件
                         </li>
                     </ul>
@@ -104,7 +104,7 @@
                     <li onclick="getData('halfMemAdobtRecord.php');" class="li">
                         查詢領養紀錄
                     </li>
-                    <li onclick="getData('halfMemAdopt.php');" class="li">
+                    <li onclick="getData('halfMemAdobt.php');" class="li">
                         審核領養案件
                     </li>
                 </ul>
