--- a/html/halfMem.html
+++ b/html/halfMem.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>中途之家會員專區</title>
-    <link rel="stylesheet" href="../css/halfMem.css">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/533f4a82f0.js"></script>
+    <link rel="stylesheet" href="../css/halfMem.css">
 </head>
 
 <body onload="getData('halfMeminfo.php');">
