--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>尋喵啟事</title>
-    <link rel="stylesheet" href="../css/guide.css">
-    <script src="../js/jquery-2.1.1.min.js"></script>
+    <link rel="stylesheet" href="css/guide.css">
+    <script src="js/jquery-2.1.1.min.js"></script>
 </head>
 
 <body>
@@ -15,10 +15,10 @@
         <div id="logo"></div>
     </div>
     <div class="guide">
-        <a href="../homepage.php">
+        <a href="./homepage.php">
             <div class="front">
                 <div class="watch">
-                    <img src="../images/guideFront.png" alt="rotate cat">
+                    <img src="./images/guideFront.png" alt="rotate cat">
                     <div class="anchor">前端</div>
                 </div>
             </div>
@@ -26,14 +26,14 @@
         <a href="./backIndex.html">
             <div class="backed">
                 <div class="watch">
-                    <img src="../images/guideBacked.png" alt="rotate cat">
+                    <img src="./images/guideBacked.png" alt="rotate cat">
                     <div class="anchor">後台</div>
                 </div>
             </div>
         </a>
     </div>
-    <script src="../js/jquery.lazylinepainter-1.7.0.min.js"></script>
-    <script src="../js/guideSvg.js"></script>
+    <script src="./js/jquery.lazylinepainter-1.7.0.min.js"></script>
+    <script src="./js/guideSvg.js"></script>
 </body>
 
 </html>
