--- a/html/backIndex.html
+++ b/html/backIndex.html
@@ -21,6 +21,7 @@
                 <input type="password" name="empPsw" id="empPsw">
                 <br>
                 <input type="submit" value="登入" class="defaultBtn">
+                <input type="button" value="退出" class="defaultBtn" onclick="javascript:history.back();">
             </form>
         </div>
     </div>
