--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>尋喵啟事</title>
+    <link rel="icon" type="image/png" href="images/logo_icon.png" />
     <link rel="stylesheet" href="css/guide.css">
     <script src="js/jquery-2.1.1.min.js"></script>
 </head>
